--- a/gcp_secret.yml
+++ b/gcp_secret.yml
@@ -6,7 +6,7 @@
     - name: Retrieve  secrets from gcp
       gcp_vault_secret:
        name: "docker"
-       private_google_api_endpoint: no
+       private_google_api_endpoint: yes
       register: gcp_secret
 
     - name: print secret value
